--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,9 @@ dependencies {
         def nav_version = "2.5.3" // Usa la última versión disponible
 
         // Navigation component
-        implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-        implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+        implementation libs.navigation.fragment.ktx
+        implementation libs.navigation.ui.ktx
+        implementation libs.material.v180
     }
 
 
