--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ compiler = "4.15.1"
 drawerlayout = "1.2.0"
 firebaseBom = "33.1.2"
 glide = "4.15.1"
+googleMaterial = "1.8.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -11,6 +12,8 @@ appcompat = "1.7.0"
 material = "1.12.0"
 materialVersion = "1.3.0"
 firebaseFirestore = "25.0.0"
+navigationFragmentKtx = "2.5.3"
+navigationUiKtx = "2.5.3"
 
 [libraries]
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
@@ -25,6 +28,9 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 material-v130 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
+material-v180 = { module = "com.google.android.material:material", version.ref = "googleMaterial" }
+navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
+navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationUiKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
